# subsscraper

./: .gitignore  README.md  pyproject.toml
src/: find_embeddings.py  gpt_shortening.py  parse_subs.py  search.py  sentence_similarity.py  subscraper.py  timecoder.py
src/conf/: config.yaml
