[tool.poetry]
name = "subscraper"
version = "0.1.0"
description = ""
authors = ["tupiznak <akej-vonavi@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2023.3.4"
hydra-core = "^1.3.2"
loguru = "^0.7.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
